--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,13 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    def nav_version = "2.6.0"
 
+    def nav_version = "2.5.3"
     // Java language implementation
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
+
+    def fragment_version = "1.6.0"
+    implementation "androidx.fragment:fragment:1.6.0"
+
 }
